2004-10-21  Stefan Jahn  <stefan@lkcc.org>

	* matvec.cpp: Fixed compiler (gcc 3.4.2) error in constructor
	and copy constructor.

2004-10-19  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp (transientCapacitance): Fixed compiler warning.

2004-10-17  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Run inititialization routine also for created
	circuits.

2004-10-16  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp (transientCapacitance): Readjusted the code for
	a single integration step for controlled capacitances.

2004-10-14  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: New function isFinite() implemented.

	* trsolver.cpp: Now transient analysis also uses variable order
	step control.
	Checking for singularity of Jacobian matrix.

	* nasolver.cpp: Yet another bug fix in the line searcher.

	* eqnsys.cpp: Using a macro LU_FAILURE to control exception
	behaviour.

2004-10-13  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: New function maxnorm() implemented.

	* nasolver.cpp (applyAttenuation): Using new tvector abilities.
	Fixed lineSearch algorithm.

	* evaluate.cpp: New sign() and sinc() functions.  Also
	simplified some function definitions using a macro.

	* vector.cpp, complex.cpp: Added sign() and sinc() functions.

2004-10-12  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added sec(), cosec(), sech() an cosech()
	functions.

	* vector.cpp: Found out that class& return values create
	memory leaks.  That is why classes changed: vector, matrix,
	matvec, tmatrix and *all* the callers.

	* tvector.h (class tvector): New class implementing a simple
	vector template.  This change speeds up equation system
	solvers and thereby DC, AC and transient simulation.  Changed
	all callers.

	* trsolver.cpp: Tried to optimize non-convergence handling.

2004-10-10  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Fixed all predictors (off-by-one indexing into
	the array of time-steps).

2004-10-09  Stefan Jahn  <stefan@lkcc.org>
