@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: mosfet.h,v 1.9 2004/10/20 22:58:56 ela Exp $
+ * $Id: mosfet.h,v 1.10 2004/10/21 09:00:31 ela Exp $
  *
  */
 
@@ -42,7 +42,10 @@ class mosfet : public circuit
   void calcTR (nr_double_t);
 
  private:
-  nr_double_t UbsPrev, UbdPrev, UgsPrev, UgdPrev, UdsPrev, UgbPrev, Udsat, Uon;
+  nr_double_t transientCharge (int, nr_double_t, nr_double_t);
+
+ private:
+  nr_double_t UbsPrev, UbdPrev, UgsPrev, UgdPrev, UdsPrev, Udsat, Uon;
   nr_double_t gbs, gbd, gm, gds, gmb, Ids, DrainControl, SourceControl;
   nr_double_t Leff, MOSdir, beta, Cox, Phi, Ga, Vto, Rs, Rd;
   nr_double_t Qgd, Qgs, Qbd, Qbs, Qgb, Ibs, Ibd;
